# devwks-2959-nat

./: .gitmodules
standalone/content/nemo-agent-toolkit/: .coderabbit.yaml  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CODE-OF-CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  conftest.py  nat.code-workspace  pyproject.toml  pytest.ini
standalone/content/nemo-agent-toolkit/.cursor/rules/: general.mdc
standalone/content/nemo-agent-toolkit/.cursor/rules/documentation/: capitalization.mdc  categories.mdc  general.mdc  punctuation.mdc
standalone/content/nemo-agent-toolkit/.cursor/rules/nat-setup/: general.mdc  nat-toolkit-installation.mdc
standalone/content/nemo-agent-toolkit/.cursor/rules/nat-tests/: general.mdc  integration-tests.mdc
standalone/content/nemo-agent-toolkit/.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copy-pr-bot.yaml  ops-bot.yaml  release.yml
standalone/content/nemo-agent-toolkit/.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation_request_correction.yml  documentation_request_new.yml  feature_request.yml
standalone/content/nemo-agent-toolkit/.github/workflows/: ci_pipe.yml  pr.yaml
standalone/content/nemo-agent-toolkit/ci/: markdown-link-check-config.json
standalone/content/nemo-agent-toolkit/ci/release/: pr_code_freeze_template.md  update-version.sh  update_doc_versions1.py  update_toml_dep.py
standalone/content/nemo-agent-toolkit/ci/scripts/: bootstrap_local_ci.sh  checks.sh  clear_notebook_output_cells.sh  common.sh  copyright.py  documentation_checks.sh  gitutils.py  license_diff.py  path_checks.py  path_checks.sh  run_ci_local.sh  run_tests.py  sbom_list.py
standalone/content/nemo-agent-toolkit/ci/scripts/github/: build_wheel.sh  checks.sh  common.sh  docs.sh  tests.sh
standalone/content/nemo-agent-toolkit/ci/scripts/gitlab/: artifactory_upload.sh  build_wheel.sh  checks.sh  common.sh  docs.sh  report_test_results.py  tests.sh
standalone/content/nemo-agent-toolkit/docker/: Dockerfile  build_container.sh
standalone/content/nemo-agent-toolkit/docs/: Makefile  README.md
standalone/content/nemo-agent-toolkit/docs/source/: conf.py  index.md  release-notes.md  versions1.json
standalone/content/nemo-agent-toolkit/docs/source/_templates/: sidebar-nav-bs.html
standalone/content/nemo-agent-toolkit/docs/source/build-workflows/: a2a-client.md  about-building-workflows.md  embedders.md  mcp-client.md  memory.md  object-store.md  retrievers.md  workflow-configuration.md
standalone/content/nemo-agent-toolkit/docs/source/components/: sharing-components.md
standalone/content/nemo-agent-toolkit/docs/source/extend/: plugins.md
standalone/content/nemo-agent-toolkit/docs/source/get-started/: installation.md  quick-start.md
standalone/content/nemo-agent-toolkit/docs/source/improve-workflows/: about-improving-workflows.md  evaluate.md  optimizer.md  profiler.md  sizing-calc.md  test-time-compute.md
standalone/content/nemo-agent-toolkit/docs/source/reference/: cli.md
standalone/content/nemo-agent-toolkit/docs/source/resources/: faq.md  migration-guide.md  security-considerations.md  support.md  troubleshooting.md
standalone/content/nemo-agent-toolkit/docs/source/run-workflows/: a2a-server.md  about-running-workflows.md  launching-ui.md  mcp-server.md
standalone/content/nemo-agent-toolkit/examples/: README.md
standalone/content/nemo-agent-toolkit/examples/A2A/currency_agent_a2a/: README.md  pyproject.toml
standalone/content/nemo-agent-toolkit/examples/A2A/math_assistant_a2a/: README.md  configs  data  pyproject.toml
standalone/content/nemo-agent-toolkit/examples/A2A/math_assistant_a2a_protected/: README.md  pyproject.toml
standalone/content/nemo-agent-toolkit/examples/HITL/por_to_jiratickets/: README.md  pyproject.toml
standalone/content/nemo-agent-toolkit/examples/HITL/simple_calculator_hitl/: README.md  pyproject.toml
standalone/content/nemo-agent-toolkit/examples/MCP/kaggle_mcp/: README.md  pyproject.toml
standalone/content/nemo-agent-toolkit/examples/MCP/service_account_auth_mcp/: README.md  configs  pyproject.toml
standalone/content/nemo-agent-toolkit/examples/MCP/simple_auth_mcp/: README.md  pyproject.toml
standalone/content/nemo-agent-toolkit/examples/MCP/simple_calculator_mcp/: README.md  pyproject.toml
standalone/content/nemo-agent-toolkit/examples/MCP/simple_calculator_mcp_protected/: README.md  pyproject.toml
standalone/content/nemo-agent-toolkit/examples/RAG/simple_rag/: README.md  pyproject.toml
standalone/content/nemo-agent-toolkit/examples/UI/: README.md
standalone/content/nemo-agent-toolkit/examples/advanced_agents/aiq_blueprint/: README.md
standalone/content/nemo-agent-toolkit/examples/advanced_agents/alert_triage_agent/: README.md  pyproject.toml
standalone/content/nemo-agent-toolkit/examples/agents/: README.md  pyproject.toml
standalone/content/nemo-agent-toolkit/examples/config_inheritance/: README.md
standalone/content/nemo-agent-toolkit/examples/deploy/: README.md  docker-compose.milvus.yml  docker-compose.minio.yml  docker-compose.mysql.yml  docker-compose.phoenix.yml  docker-compose.redis.yml
standalone/content/nemo-agent-toolkit/examples/documentation_guides/: README.md  pyproject.toml
standalone/content/nemo-agent-toolkit/examples/dynamo_integration/: .env.example  ARCHITECTURE.md  README.md
standalone/content/nemo-agent-toolkit/examples/notebooks/: README.md  adding_tools_to_agents.ipynb  bringing_your_own_agent.ipynb  getting_started_with_nat.ipynb  hello_world.ipynb  mcp_setup_and_integration.ipynb  multi_agent_orchestration.ipynb  observability_evaluation_and_profiling.ipynb  optimize_model_selection.ipynb  pyproject.toml
standalone/content/nemo-agent-toolkit/scripts/: bootstrap_milvus.sh  langchain_web_ingest.py  sitemap_scraper.py  web_utils.py
standalone/content/nemo-agent-toolkit/test_data/: azure_openai_e2e.yaml  config.yaml  docker-compose.services.yml  echo.yaml  invalid_yaml.yaml  missing_section_config.yaml  missing_type_config.yaml
standalone/content/nemo-agent-toolkit/test_data/piston/: Dockerfile
(+532 files in other folders)
