# SPDX-FileCopyrightText: Copyright (c) 2026, NVIDIA CORPORATION & AFFILIATES.
# All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64", "setuptools-scm>=8", "setuptools_dynamic_dependencies>=1.0.0"]

[tool.setuptools_scm]
git_describe_command = "git describe --long --first-parent"

[project]
name = "nvidia-nat"
dynamic = ["version", "dependencies", "optional-dependencies"]
requires-python = ">=3.11,<3.14"
description = "NVIDIA NeMo Agent Toolkit"
readme = "README.md"
license = { text = "Apache-2.0" }
keywords = ["ai", "rag", "agents"]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
authors = [{ name = "NVIDIA Corporation" }]
maintainers = [{ name = "NVIDIA Corporation" }]

[project.urls]
documentation = "https://docs.nvidia.com/nemo/agent-toolkit/latest/"
source = "https://github.com/NVIDIA/NeMo-Agent-Toolkit"

[tool.setuptools_dynamic_dependencies]
dependencies = ["nvidia-nat-core == {version}"]

[tool.setuptools_dynamic_dependencies.optional-dependencies]
# Optional dependencies are things that users would want to install with NAT. i.e. `uv pip install "nvidia-nat[langchain]"`
# Keep sorted!!!
a2a = ["nvidia-nat-a2a == {version}"]
adk = ["nvidia-nat-adk == {version}"]
agno = ["nvidia-nat-agno == {version}"]
autogen = ["nvidia-nat-autogen == {version}"]
core = ["nvidia-nat-core == {version}"]
crewai = ["nvidia-nat-crewai == {version}"]
data-flywheel = ["nvidia-nat-data-flywheel == {version}"]
langchain = ["nvidia-nat-langchain == {version}"]
llama-index = ["nvidia-nat-llama-index == {version}"]
mcp = ["nvidia-nat-mcp == {version}"]
mem0ai = ["nvidia-nat-mem0ai == {version}"]
nemo-customizer = ["nvidia-nat-nemo-customizer == {version}"]
openpipe-art = ["nvidia-nat-openpipe-art == {version}"]
opentelemetry = ["nvidia-nat-opentelemetry == {version}"]
phoenix = ["nvidia-nat-phoenix == {version}"]
ragaai = ["nvidia-nat-ragaai == {version}"]
mysql = ["nvidia-nat-mysql == {version}"]
redis = ["nvidia-nat-redis == {version}"]
s3 = ["nvidia-nat-s3 == {version}"]
semantic-kernel = ["nvidia-nat-semantic-kernel == {version}"]
strands = ["nvidia-nat-strands == {version}"]
test = ["nvidia-nat-test == {version}"]
vanna = ["nvidia-nat-vanna == {version}"]
weave = ["nvidia-nat-weave == {version}"]
zep-cloud = ["nvidia-nat-zep-cloud == {version}"]

# define any dependency extras in core so we can easily propagate to most
async_endpoints = [ "nvidia-nat-core[async_endpoints] == {version}" ]
gunicorn = [ "nvidia-nat-core[gunicorn] == {version}" ]
pii-defense = [ "nvidia-nat-core[pii-defense] == {version}" ]
profiling = [ "nvidia-nat-core[profiling] == {version}" ]

most = [
  "nvidia-nat-a2a == {version}",
  "nvidia-nat-adk == {version}",
  "nvidia-nat-agno == {version}",
  "nvidia-nat-autogen == {version}",
  "nvidia-nat-core[async_endpoints,gunicorn,pii-defense,profiling] == {version}",
  "nvidia-nat-crewai == {version}",
  "nvidia-nat-data-flywheel == {version}",
  "nvidia-nat-langchain == {version}",
  "nvidia-nat-llama-index == {version}",
  "nvidia-nat-mcp == {version}",
  "nvidia-nat-mem0ai == {version}",
  "nvidia-nat-nemo-customizer == {version}",
  "nvidia-nat-opentelemetry == {version}",
  "nvidia-nat-phoenix == {version}",
  "nvidia-nat-mysql == {version}",
  "nvidia-nat-redis == {version}",
  "nvidia-nat-s3 == {version}",
  "nvidia-nat-semantic-kernel == {version}",
  "nvidia-nat-strands == {version}",
  "nvidia-nat-test == {version}",
  "nvidia-nat-vanna == {version}",
  "nvidia-nat-weave == {version}",
  "nvidia-nat-zep-cloud == {version}",
]

examples = [
  "nat_adk_demo",
  "nat_agno_personal_finance",
  "nat_agents_examples",
  "nat_alert_triage_agent",
  "nat_autogen_demo",
  "nat_automated_description_generation",
  "nat_currency_agent_a2a",
  "nat_dpo_tic_tac_toe",
  "nat_documentation_guides",
  "nat_email_phishing_analyzer",
  "nat_haystack_deep_research_agent",
  "nat_kaggle_mcp",
  "nat_math_assistant_a2a",
  "nat_math_assistant_a2a_protected",
  "nat_multi_frameworks",
  "nat_notebooks",
  "nat_per_user_workflow",
  "nat_plot_charts",
  "nat_por_to_jiratickets",
  "nat_profiler_agent",
  "nat_react_benchmark_agent",
  "nat_redis_example",
  "nat_retail_agent",
  "nat_rl_with_openpipe_art",
  "nat_router_agent",
  "nat_semantic_kernel_demo",
  "nat_sequential_executor",
  "nat_service_account_auth_mcp",
  "nat_simple_auth",
  "nat_simple_auth_mcp",
  "nat_simple_calculator",
  "nat_simple_calculator_custom_routes",
  "nat_simple_calculator_eval",
  "nat_simple_calculator_hitl",
  "nat_simple_calculator_mcp",
  "nat_simple_calculator_mcp_protected",
  "nat_simple_calculator_observability",
  "nat_simple_rag",
  "nat_simple_web_query",
  "nat_simple_web_query_eval",
  "nat_strands_demo",
  "nat_swe_bench",
  "nat_user_report",
  "text_file_ingest",
]

[dependency-groups]
# Dependency groups are only for developers to aid in managing dependencies local to a dev machine.
dev = [
  "beautifulsoup4~=4.13",
  "httpx-sse~=0.4",
  "ipython~=8.31",
  "langchain-community~=0.3", # web ingest script
  "nbconvert", # Version determined by jupyter
  "pre-commit>=4.0,<5.0",
  "python-docx~=1.1",
  "ruff~=0.12",
  "setuptools >= 64",
  "setuptools_scm>=8",
  "tomlkit>=0.13.2",
  "twine~=6.0",
  "vale~=3.12",
  "yapf==0.43.*",
  # documentation related dependencies
  "myst-parser~=4.0",
  "nbsphinx~=0.9",
  "nvidia-sphinx-theme>=0.0.9",
  "sphinx~=8.2",
  "sphinx-autoapi>=3.6",
  "sphinx-copybutton>=0.5",
  "sphinx_design~=0.6",
  "sphinx-mermaid",
  "sphinx-reredirects~=1.1",
  # transitive dependencies
  "werkzeug>=3.1.5",
]

[tool.setuptools]
include-package-data = true
packages = []

[tool.uv]
conflicts = [
    # (adk|crewai)<>openpipe-art have incompatible litellm versions
    [{ extra = "adk" }, { extra = "openpipe-art" }],
    [{ extra = "crewai" }, { extra = "openpipe-art" }],
    [{ extra = "most" }, { extra = "openpipe-art" }],
    # (strands|adk)<>ragaai have incompatible tenacity versions
    [{ extra = "adk" }, { extra = "ragaai" }],
    [{ extra = "strands" }, { extra = "ragaai" }],
    [{ extra = "most" }, { extra = "ragaai" }],
]

[tool.uv.sources]
# Packages
nvidia-nat-a2a = { path = "packages/nvidia_nat_a2a", editable = true }
nvidia-nat-adk = { path = "packages/nvidia_nat_adk", editable = true }
nvidia-nat-agno = { path = "packages/nvidia_nat_agno", editable = true }
nvidia-nat-autogen = { path = "packages/nvidia_nat_autogen", editable = true }
nvidia-nat-core = { path = "packages/nvidia_nat_core", editable = true }
nvidia-nat-crewai = { path = "packages/nvidia_nat_crewai", editable = true }
nvidia-nat-data-flywheel = { path = "packages/nvidia_nat_data_flywheel", editable = true }
nvidia-nat-langchain = { path = "packages/nvidia_nat_langchain", editable = true }
nvidia-nat-llama-index = { path = "packages/nvidia_nat_llama_index", editable = true }
nvidia-nat-mcp = { path = "packages/nvidia_nat_mcp", editable = true }
nvidia-nat-mem0ai = { path = "packages/nvidia_nat_mem0ai", editable = true }
nvidia-nat-nemo-customizer = { path = "packages/nvidia_nat_nemo_customizer", editable = true }
nvidia-nat-openpipe-art = { path = "packages/nvidia_nat_openpipe_art", editable = true }
nvidia-nat-opentelemetry = { path = "packages/nvidia_nat_opentelemetry", editable = true }
nvidia-nat-phoenix = { path = "packages/nvidia_nat_phoenix", editable = true }
nvidia-nat-ragaai = { path = "packages/nvidia_nat_ragaai", editable = true }
nvidia-nat-mysql = { path = "packages/nvidia_nat_mysql", editable = true }
nvidia-nat-redis = { path = "packages/nvidia_nat_redis", editable = true }
nvidia-nat-s3 = { path = "packages/nvidia_nat_s3", editable = true }
nvidia-nat-semantic-kernel = { path = "packages/nvidia_nat_semantic_kernel", editable = true }
nvidia-nat-strands = { path = "packages/nvidia_nat_strands", editable = true }
nvidia-nat-test = { path = "packages/nvidia_nat_test", editable = true }
nvidia-nat-vanna = { path = "packages/nvidia_nat_vanna", editable = true }
nvidia-nat-weave = { path = "packages/nvidia_nat_weave", editable = true }
nvidia-nat-zep-cloud = { path = "packages/nvidia_nat_zep_cloud", editable = true }

# Examples
nat_adk_demo = { path = "examples/frameworks/adk_demo", editable = true }
nat_agno_personal_finance = { path = "examples/frameworks/agno_personal_finance", editable = true }
nat_agents_examples = { path = "examples/agents", editable = true }
nat_alert_triage_agent = { path = "examples/advanced_agents/alert_triage_agent", editable = true }
nat_autogen_demo = { path = "examples/frameworks/nat_autogen_demo", editable = true }
nat_automated_description_generation = { path = "examples/custom_functions/automated_description_generation", editable = true }
nat_currency_agent_a2a = { path = "examples/A2A/currency_agent_a2a", editable = true }
nat_dpo_tic_tac_toe = { path = "examples/finetuning/dpo_tic_tac_toe", editable = true }
nat_documentation_guides = { path = "examples/documentation_guides", editable = true }
nat_email_phishing_analyzer = { path = "examples/evaluation_and_profiling/email_phishing_analyzer", editable = true }
nat_haystack_deep_research_agent = { path = "examples/frameworks/haystack_deep_research_agent", editable = true }
nat_kaggle_mcp = { path = "examples/MCP/kaggle_mcp", editable = true }
nat_math_assistant_a2a = { path = "examples/A2A/math_assistant_a2a", editable = true }
nat_math_assistant_a2a_protected = { path = "examples/A2A/math_assistant_a2a_protected", editable = true }
nat_multi_frameworks = { path = "examples/frameworks/multi_frameworks", editable = true }
nat_notebooks = { path = "examples/notebooks", editable = true }
nat_per_user_workflow = { path = "examples/front_ends/per_user_workflow", editable = true }
nat_plot_charts = { path = "examples/custom_functions/plot_charts", editable = true }
nat_por_to_jiratickets = { path = "examples/HITL/por_to_jiratickets", editable = true }
nat_profiler_agent = { path = "examples/advanced_agents/profiler_agent", editable = true }
nat_react_benchmark_agent = { path = "examples/dynamo_integration/react_benchmark_agent", editable = true }
nat_redis_example = { path = "examples/memory/redis", editable = true }
nat_retail_agent = { path = "examples/safety_and_security/retail_agent", editable = true }
nat_rl_with_openpipe_art = { path = "examples/finetuning/rl_with_openpipe_art", editable = true }
nat_router_agent = { path = "examples/control_flow/router_agent", editable = true }
nat_semantic_kernel_demo = { path = "examples/frameworks/semantic_kernel_demo", editable = true }
nat_sequential_executor = { path = "examples/control_flow/sequential_executor", editable = true }
nat_service_account_auth_mcp = { path = "examples/MCP/service_account_auth_mcp", editable = true }
nat_simple_auth = { path = "examples/front_ends/simple_auth", editable = true }
nat_simple_auth_mcp = { path = "examples/MCP/simple_auth_mcp", editable = true }
nat_simple_calculator = { path = "examples/getting_started/simple_calculator", editable = true }
nat_simple_calculator_custom_routes = { path = "examples/front_ends/simple_calculator_custom_routes", editable = true }
nat_simple_calculator_eval = { path = "examples/evaluation_and_profiling/simple_calculator_eval", editable = true }
nat_simple_calculator_hitl = { path = "examples/HITL/simple_calculator_hitl", editable = true }
nat_simple_calculator_mcp = { path = "examples/MCP/simple_calculator_mcp", editable = true }
nat_simple_calculator_mcp_protected = { path = "examples/MCP/simple_calculator_mcp_protected", editable = true }
nat_simple_calculator_observability = { path = "examples/observability/simple_calculator_observability", editable = true }
nat_simple_rag = { path = "examples/RAG/simple_rag", editable = true }
nat_simple_web_query = { path = "examples/getting_started/simple_web_query", editable = true }
nat_simple_web_query_eval = { path = "examples/evaluation_and_profiling/simple_web_query_eval", editable = true }
nat_strands_demo = { path = "examples/frameworks/strands_demo", editable = true }
nat_swe_bench = { path = "examples/evaluation_and_profiling/swe_bench", editable = true }
nat_user_report = { path = "examples/object_store/user_report", editable = true }
text_file_ingest = { path = "examples/documentation_guides/workflows/text_file_ingest", editable = true }

[tool.ruff]
# Set the maximum line length to 120.
line-length = 120
target-version = "py311"

[tool.ruff.lint]

select = [
  # The E, F, W categories are flake8 rules.
  "E",
  "F",
  "W",
  # Enable isort support
  "I",
  # Enable partial pylint support
  "PL",
  # Enable pyupgrade support
  "UP"
]

extend-ignore = [
  "PLC0415", # Allow lazy imports inside functions
  # Disable all the "too-*" checks, as they are too strict for our codebase
  "PLR0904", # too-many-public-methods
  "PLR0911", # too-many-return-statements
  "PLR0912", # too-many-branches
  "PLR0913", # too-many-arguments
  "PLR0914", # too-many-locals
  "PLR0915", # too-many-statements
  "PLR0917", # too-many-positional-arguments
  "PLR1702", # too-many-nested-blocks
  "PLR2004", # Magic value used in comparison this happens a lot within unittests
  "PLW0108", # unnecessary-lambda
  "PLW2901", # allow re-assigning a loop variable
]

[tool.ruff.lint.isort]
combine-as-imports = true
default-section = "third-party"
force-single-line = true
known-first-party = ["aiq", "nat", "nat_*", "_utils"]
known-third-party = [
  "agno",
  "autogen",
  "crewai",
  "google",
  "langchain",
  "llama_index",
  "mem0ai",
  "redis",
  "semantic_kernel",
  "zep_cloud",
]
order-by-type = true

# ===== yapf Config =====
[tool.yapf]
based_on_style = "pep8"
column_limit = 120
split_all_top_level_comma_separated_values = true
join_multiple_lines = true
indent_dictionary_value = true


# ===== pyright Config =====
[tool.pyright]
deprecateTypingAliases = true
reportInvalidTypeForm = "warning"
