# SPDX-FileCopyrightText: Copyright (c) 2025-2026, NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64", "setuptools-scm>=8", "setuptools_dynamic_dependencies>=1.0.0"]

[tool.setuptools_scm]
git_describe_command = "git describe --long --first-parent"
root = "../../.."

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "nat_simple_calculator_hitl"
dynamic = ["version", "dependencies"]
requires-python = ">=3.11,<3.14"
description = "Simple Calculator Evaluation and Profiling - demonstrates NeMo Agent Toolkit evaluation capabilities"
keywords = ["ai", "hitl", "human in the loop", "agents"]
classifiers = ["Programming Language :: Python"]

[tool.setuptools_dynamic_dependencies]
dependencies = [
  "nvidia-nat[langchain,test] == {version}",
  "nat_simple_calculator",
  "nat_por_to_jiratickets",
]

[tool.uv.sources]
nvidia-nat = { path = "../../..", editable = true }
nat_simple_calculator = { path = "../../getting_started/simple_calculator", editable = true }
nat_por_to_jiratickets = { path = "../por_to_jiratickets", editable = true }

[project.entry-points.'nat.components']
nat_simple_calculator_hitl = "nat_simple_calculator_hitl.register"
